--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,7 +1,7 @@
 #-------------------------------
 # General Site Settings
 
-title: Kross
+title: Jangminju
 logo: 
 author: themefisher
 description: this is meta description
@@ -38,7 +38,7 @@ disqus-identifier: # Add your shortname for Disqus Comment. For example mr-brown
 # Hero Section
 
 hero:
-  hero-title: Hi! I’m <br> Christoher <br> UX designer
+  hero-title: 안녕하세요. <br> JAVA개발자 <br> 장민주입니다.
 
 social:
 - {icon: "ti-facebook", link: "#"}
