--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -39,7 +39,7 @@ disqus-identifier: # Add your shortname for Disqus Comment. For example mr-brown
 
 hero:
   hero-title: Hi! I’m<br>Jangminju<br>Java developer
-  
+
 social:
 - {icon: "ti-facebook", link: "#"}
 - {icon: "ti-instagram", link: "#"}
@@ -52,8 +52,7 @@ social:
 
 # About Section
 blurb:
-  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-
+  안녕하세요. 저는 초보 개발자 장민주입니다. 도전하는 것과 경험하는 것을 좋아하며, 현재는 개발자가 되기 위한 도전을 하고 있습니다. 제 꿈은 많은 사람들이 좋아하고 즐겨 사용하는 좋은 웹&앱 서비스를 만드는 것 입니다.  
 blurb-btn-link: '/about'
 blurb-btn-name: know more
 
