--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -53,7 +53,7 @@ social:
 # About Section
 blurb:
   안녕하세요. 저는 초보 개발자 장민주입니다.<br> 
-  도전하는 것과 경험하는 것을 좋아하며, 현재는 개발자가 되기 위한 도전을 하고 있습니다. 
+  도전하는 것과 경험하는 것을 좋아하며, 현재는 개발자가 되기 위한 도전을 하고 있습니다. <br>
   제 꿈은 많은 사람들이 좋아하고 즐겨 사용하는 좋은 서비스를 만드는 것 입니다.  
 blurb-btn-link: '/about'
 blurb-btn-name: know more
