--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -96,7 +96,7 @@ team:
 
 skills-title: Skills
 skills:
-- {name: Spring boot, color: '#fdb157', value: '90%'}
+- {name: Spring boot, color: '#fdb157', value: }
 - {name: Logo Design, color: '#9473e6', value: '60%'}
 - {name: After Effects, color: '#bdecf6', value: '80%'}
 - {name: Web App, color: '#ffbcaa', value: '70%'}
