--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -187,7 +187,7 @@ portfolio-label:
 
 portfolio-items:
   - image : "assets/images/portfolio/bubu.png"
-    url: "#"
+    url: "https://github.com/seowonme/public-parking3"
     portfolio-type:
      - type: "design"
      - type: "illustration"
