--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -173,8 +173,8 @@ portfolio-home-items:
 # Portfolio Page
 portfolio-label:
 - {
-    title : "UI/UX Design",
-    type : "design"
+    title : "Project",
+    type : "branding"
   }
 - {
     title : "BRANDING",
