--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -174,7 +174,7 @@ portfolio-home-items:
 portfolio-label:
 - {
     title : "Project",
-    type : "branding"
+    type : "design"
   }
 - {
     title : "BRANDING",
