--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -189,13 +189,13 @@ portfolio-items:
   - image : "assets/images/portfolio/bubu.png"
     url: "https://github.com/seowonme/public-parking3"
     portfolio-type:
-     - type: "design"
+     - type: "Project"
   #   - type: "illustration"
       
   - image : "assets/images/portfolio/list.png"
     url: "https://github.com/jangminju/Todolist"
     portfolio-type:
-      - type: "design"
+      - type: "Project"
       
   - image : "assets/images/portfolio/item-3.png"
     url: "#"
