--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -193,7 +193,7 @@ portfolio-items:
   #   - type: "illustration"
 
   - image : "assets/images/portfolio/pupu2.png"
-    url: "https://docs.google.com/presentation/d/1tEdGhwtHBAYgKdAaxhMUFlPooBlnA0sJ/edit?usp=sharing&ouid=116059998039615571768&rtpof=true&sd=true"
+    url: "https://drive.google.com/file/d/12x8mHvkt2NbtpMJ-ej6Nen5lCGU2xCoE/view?usp=sharing"
     portfolio-type:
       - type: "ppt"
       
