--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -243,10 +243,8 @@ testimonial-items:
   - name: "나희승"
     image: "assets/images/testimonial/ceo.jpeg"
     designation : "한국철도기술연구원 원장"
-    content : "새로운 업무도 빠르게 적응하는 능력을 갖추고 있습니다.<br>
-    사원들과의 대인관계가 좋으며, 주변에 많은 도움을 주고 있습니다.<br>
-    성실하고 바른 품행으로 조직 내 긍정적인 분위기를 조성하였습니다.<br>
-    업무를 스스로 찾아서 처리할 줄 압니다.<br>
+    content : "새로운 업무도 빠르게 적응하는 능력을 갖추고 있습니다. 사원들과의 대인관계가 좋으며, 주변에 많은 도움을 주고 있습니다.<br>
+    성실하고 바른 품행으로 조직 내 긍정적인 분위기를 조성하였습니다. 업무를 스스로 찾아서 처리할 줄 압니다.<br>
     2년 간 업무수행 능력을 볼 때 향후 귀사의 업무를 충분히 소화할 것으로 보이며,<br>
     자신의 개발을 더 열심히 하여 회사의 보탬이 될 수 있는 인재가 될 것이라고 생각합니다."
     
