--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -297,4 +297,4 @@ client-slider-items:
 # Contact Section
 
 contact-title: Contact Info
-contact-email: steve.fruits@email.com
+contact-email: say_03@naver.com
