--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -79,15 +79,15 @@ work-process:
 # My Team Section
 team:
   - title : "Jack Schenziwe"
-    image : "assets/images/team/member-1.png"
+    image : "assets/images/team/m1.png"
     designation : "Project Manager"
     
   - title : "Julias Carlie"
-    image : "assets/images/team/member-2.png"
+    image : "assets/images/team/m2.png"
     designation : "Web Developer"
     
   - title : "John Doe"
-    image : "assets/images/team/member-3.png"
+    image : "assets/images/team/m3.jpeg"
     designation : "Designer"
 
     - title : "John Doe"
