--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -86,9 +86,9 @@ team:
     image : "assets/images/team/member-2.png"
     designation : "Web Developer"
     
-  - title : "John Doe"
+  - title : "최서원"
     image : "assets/images/team/member-3.jpeg"
-    designation : "Designer"
+    designation : "Backend Developer"
 
     - title : "John Doe"
     image : "assets/images/team/member-3.jpeg"
