--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -290,7 +290,7 @@ client-slider-items:
   - logo: "assets/images/clients-logo/logo_09.gif"
     url: "#"
     
-  - logo: "assets/images/clients-logo/logo_10.gif"
+  - logo: "assets/images/clients-logo/logo_10.jpg"
     url: "#"
 
 #-------------------------------
